docs:swag::fix swag not support some data types
