# docs/swagger.json
@@ -15,7 +15,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Get Refresh Token",
+                "summary": "Login",
                 "parameters": [
                     {
                         "description": "Register request",
@@ -23,7 +23,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/authDomain.RequestCreateRefreshToken"
+                            "$ref": "#/definitions/authDomain.RequestLogin"
                         }
                     }
                 ],
@@ -105,12 +105,60 @@
                     }
                 }
             }
+        },
+        "/auth/token/refresh": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Get Refresh Token",
+                "parameters": [
+                    {
+                        "description": "Register request",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/authDomain.RequestToken"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/authDomain.ResponseRefreshToken"
+                        }
+                    },
+                    "401": {
+                        "description": "Username or password is incorect",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Form validation error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "authDomain.RequestCreateRefreshToken": {
-            "type": "object"
-        },
         "authDomain.RequestLogin": {
             "type": "object",
             "required": [
@@ -151,6 +199,17 @@
                 }
             }
         },
+        "authDomain.RequestToken": {
+            "type": "object",
+            "required": [
+                "refreshToken"
+            ],
+            "properties": {
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
         "authDomain.ResponseRefreshToken": {
             "type": "object",
             "properties": {
@@ -173,7 +232,7 @@
                 }
             }
         },
-        "response.ErrorMessageResponse": {
+        "ernos.Ernos": {
             "type": "object",
             "properties": {
                 "attribute": {},
@@ -182,6 +241,9 @@
                 },
                 "message": {
                     "type": "string"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         },
@@ -189,7 +251,7 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/response.ErrorMessageResponse"
+                    "$ref": "#/definitions/ernos.Ernos"
                 }
             }
         }
